[package]
name = "skript"
version = "0.6.5"
edition = "2021"
authors = ["Pojesh"]
license = "GPL-3.0-or-later"
description = "An AI-powered command shell"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
inquire = "0.6"
rustyline = "12.0"
keyring = "2.0"

[package.metadata.wix]

upgrade-guid = "0dd91775-32d2-48b5-b5be-befb2e958a5f"
path-guid = "48330307-86ef-4139-bf59-8ddaf684e12e"
license = "LICENSE.rtf"
banner = "false"
dialog = "false"
product-name = "Skript AI Shell"
manufacturer = "Pojesh"